<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate areas seamlessly!"
        android:textSize="20sp"
        />
        <EditText
            android:id="@+id/edittext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter length"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/edittext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter breadth"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/area_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Area"
            android:onClick="displayArea"
            />

</LinearLayout>